# conan-branch-test

./: readme.txt
TestLibA/: conanfile.py
TestLibA/src/: CMakeLists.txt  MyTestLibA.cpp  MyTestLibA.h
TestLibA/test_package/: conanfile.py  example.cpp
TestLibB/: conanfile.py  config.yml  output.json  package_search.json
TestLibB/2.0.1/: conandata.yml  conanfile.py
TestLibB/2.0.1/src/: CMakeLists.txt  Config.cmake.in  MyTestLibB.cpp  MyTestLibB.h
TestLibB/2.0.1/test_package/: example.cpp
TestLibB/all/test_package/: conanfile.py
